--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <header id="header">
-      <h1 id="dashboard-title">Student Dashboard</h1>
+      <h1 id="dashboard-title">Studont Dashboard</h1>
       <div class="user-info">
         <span id="greeting"></span>
         <button id="toggle-mode">Toggle Calm Mode</button>
